k8s/apps/wakatime-to-slack-profile/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    labels:
        app: wakatime-to-slack-profile
        app.kubernetes.io/name: wakatime-to-slack-profile
    name: wakatime-to-slack-profile
    namespace: wakatime-to-slack-profile
spec:
    ingressClassName: cilium
    rules:
        - host: wakatime.walnuts.dev
          http:
            paths:
                - backend:
                    service:
                        name: wakatime-to-slack-profile
                        port:
                            number: 8080
                  path: /
                  pathType: Prefix

---
